<resources>
    <string name="app_name">SingleScreenApp</string>
    <string name="address">From Jordan , Irbid , Al_hisn , Bani_obed </string>
    <string name="number">+997 773154064</string>
    <string name="des"> ” Small virtual shops, is for treasure hunters, seasoned buyers, especially for older people they will provide all the necessary products for them. It evokes a memento, nostalgia, and longs for childhood games, those who have artistic passion find themselves here, if anyone has lost their precious piece you may find here and allow people to donate unique pieces for free if they want. And for people who have unique pieces and want to show them, they can contact me by number. \n There is also a  app called souvenir People can download any unique pieces they want to sell or donate you can download the site from here :    https://github.com/mkzref/souvenirproject  ”</string>
    <string name="phone">Phone</string>
    <string name="myname">Marwa Hatamleh</string>
    <string name="place">Jordan, Irbid</string>
    <string name="descrption1">If I go down .. I will go down fighting</string>
    <string name="descrption2">I\'ll go down .. Down Like Lighting ♫ ↝</string>
    <string name="aboutcompany">About Company</string>
</resources>