<?xml version="1.0" encoding="utf-8"?>
<!--XML Marwa hatamleh -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.singlescreenapp.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:background="#fff">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:contentDescription="Cover Photo"
                android:scaleType="fitXY"
                android:src="@drawable/olld" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_75"
                android:src="@drawable/person"
                app:civ_border_width="@dimen/dp_2"
                app:civ_border_color="@color/f"
               />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/myname"
                android:textColor="#000"
                android:textSize="@dimen/sp_22"
                tools:ignore="MissingClass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="     "
                android:textColor="#000"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/descrption1"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/descrption2"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

                        <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_60"
                android:background="@color/a" />

            <LinearLayout
                android:layout_width="353dp"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3,700"
                    android:textColor="#000"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Followers"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />
            </LinearLayout>
            <View
                android:layout_width="@dimen/dp_2"
                android:layout_height="@dimen/dp_60"
                android:background="@color/a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1,000"
                    android:textColor="#000"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Friends"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>
            </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_30"
            android:background="#79C5CF">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/phone"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_business_24" />
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="       Souvenir ~"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />



            <ImageView
                android:id="@+id/imagephone"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_below="@+id/name"
                android:layout_marginTop="9dp"
                android:contentDescription="@string/phone"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_phone_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toRightOf="@+id/imagephone"
                android:autoLink="phone"
                android:text="@string/number"
                android:textColor="#E91E63"
               />

            <ImageView
                android:id="@+id/address"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_below="@+id/imagephone"
                android:layout_marginTop="9dp"
                android:contentDescription="address"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_add_location_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imagephone"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toRightOf="@+id/address"
                android:text="@string/address"
                android:textColor="#fff"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About"
                android:textSize="20dp"
                android:textColor="#000"
                android:textStyle="italic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----------"
                android:textSize="20dp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/des"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

        </LinearLayout></LinearLayout>
</ScrollView>



    <!--XML Marwa hatamleh -->